update the pages. NOT COMPLETE.

--- a/static/css/external.css
+++ b/static/css/external.css
@@ -38,3 +38,7 @@ fieldset[disabled] .questionOption.active {
     color: #FF0088;
     background-color: #ffffff;
 }
+
+.warning-title {
+    color: red;
+}
